
ChangeLog
 [ + added, - removed, * changed ]
 * 13Jun2018 Activates library auto-init by default in all tracing libraries (closes #5 #12)
 * 06Jun2018 Implements OpenMP Fortran wrappers
 * 05Jun2018 Refactors functions and structures used in the requests hash table
 * 01Jun2018 Clarifies mpimpi2prv error message when running with 1 task
 * 01Jun2018 Fixes wrong include in UF_xl_instrument.c
 * 01Jun2018 Compile MPI_Fetch_and_op, MPI_Compare_and_swap and MPI_Win_flush* only if MPI3 is supported
 * 31May2018 Fixes cudaStreamDestroy wrappers
 + 29May2018 Adds missing CUDA wrappers and callbacks for the creation and destruction of streams
 + 29May2018 Add $DESTDIR to src/others/Makefile.am to be able to create RPM's
 + 22May2018 Adds instrumentation support for MPI_Fetch_and_op, MPI_Compare_and_swap and MPI_Win_flush* routines (closes #2)
 * 18May2018 Fixed wrong format of tag in the prv trace that resulted in negative comm tags
 * 17May2018 Adds extrae_module.f90 to distribution
 + 15May2018 Added configure check for MPI_Get_accumulate, BullMPI does not implement this routine
 + 11May2018 Added support for ARM64 cross-compilation (GitHub pull #11)
 + 10May2018 Added instrumentation wrapper for ioctl()
 * 06Apr2018 Fixed missing states for MPI_*neighbor* routines
 * 20Mar2018 Added instrumentation support for MPI_*neighbor* routines
 * 19Mar2018 Allows defining a trace-control gops interval starting at 0
 * 15Mar2018 Fixes segfault when EXTRAE_CONFIG_FILE is wrong (GitHub issue #1)
 * 28Feb2018 Fix invalid read in WriteFileBuffer_delete (GitHub pull #9)
 * 28Feb2018 Adds R/W lock in OMPT-helper functions (GitHub pull #6)
 * 13Feb2018 Adds message to warn about merger not able to open the binary to translate addresses
 * 09Feb2018 Changes index calculation when there is no nesting
 * 23Jan2018 Fixes Testsome wrapper calling PMPI_Waitsome instead of PMPI_Testsome (GitHub issue #3)
 * 09Jan2018 Added mutex to protect buffers' double frees from dying pthreads